--- a/index.html
+++ b/index.html
@@ -38,28 +38,34 @@
     <!-- game display / messaging section -->
     <section class="game-state-wrapper">
       <img class="game-graphic" alt="a tomato monster" src="./assets/rabbit-happy.png" />
-      <h2 id="message" class="hidden"></h2>
-      <button id="restart" class="hidden">Play Again</button>
     </section>
   </main>
-
-  <!-- Add this right after the header section -->
-  <div id="pet-select-modal" class="modal">
+  <div id="game-over" class="modal hidden">
     <div class="modal-content">
-      <h2>Choose Your Pet</h2>
-      <div class="pet-options">
-        <div class="pet-choice" data-pet="rabbit">
-          <img src="./assets/rabbit-happy.png" alt="Rabbit">
-        </div>
-        <div class="pet-choice" data-pet="puppy">
-          <img src="./assets/puppy-happy.png" alt="Puppy">
-        </div>
-        <div class="pet-choice" data-pet="alien">
-          <img src="./assets/alien-happy.png" alt="Alien">
+      <h2 id="message" class="hidden"></h2>
+      <img id="dead-pet" class="game-graphic" alt="a tomato monster" src="" />
+    <br/>
+      <button id="restart" class="hidden">Play Again</button>
+      </div>
+    </div>
+
+    <!-- Add this right after the header section -->
+    <div id="pet-select-modal" class="modal">
+      <div class="modal-content">
+        <h2>Choose Your Pet</h2>
+        <div class="pet-options">
+          <div class="pet-choice" data-pet="rabbit">
+            <img src="./assets/rabbit-happy.png" alt="Rabbit">
+          </div>
+          <div class="pet-choice" data-pet="puppy">
+            <img src="./assets/puppy-happy.png" alt="Puppy">
+          </div>
+          <div class="pet-choice" data-pet="alien">
+            <img src="./assets/alien-happy.png" alt="Alien">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </body>
 
 </html>
