Added REAME.md and emojis for buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <main class="hidden">
     <!-- game interface / UI section -->
     <section class="button-wrapper">
-      <button id="play">Play</button>
-      <button id="feed">Feed</button>
-      <button id="sleep">Sleep</button>
+      <button id="play">Play 🎾</button>
+      <button id="feed">Feed 🍖</button>
+      <button id="sleep">Sleep 💤</button>
     </section>
 
     <!-- game data section -->
